# clipboard-canvas

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  ErrorBoundary.tsx  canvas.ts  main.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
